* Bug #32037: Fix alignment of grid buttons in tile view and adjust the scrollposition that triggers rendering of new items
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@78468 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/GridTile.styl
+++ b/management/univention-web/css/GridTile.styl
@@ -31,10 +31,6 @@
 			display: none
 
 		.dijitDropDownButton
-			material-shadow-common()
-			material-shadow(1)
-			margin: 12px
-
 			.dijitButtonContents
 				line-height: inherit
 
@@ -79,6 +75,7 @@
 		.umcGridTileName
 			overflow: hidden
 			text-overflow: ellipsis
+			white-space: nowrap
 
 		.umcGridTileIcon
 			height: 70px
